# steelseries-screen-sync-rgb

./: Cargo.toml  README.md
gamesense-0.1.2/: .cargo_vcs_info.json  Cargo.toml
gamesense-0.1.2/src/: client.rs  raw_client.rs
gamesense-0.1.2/src/handler/: mod.rs  screen.rs
src/: main.rs
