[package]
name = "steelseries-screen-sync-rgb"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
# @TODO Create a PR for gamesense support of RGB requests.
gamesense = { path = "gamesense-0.1.2"}
scrap = "0.5"
image = "0.24.7"
show-image = "0.13.1"
pixel-canvas = "0.2.3"
num = "0.4.1"